Added the option of finding optimum lambda (does not seem to work) If you set iteration number to negative, the code turns out lambda optimization, only in the first iteration though.

--- a/cfg/invert_iron_6300.cfg
+++ b/cfg/invert_iron_6300.cfg
@@ -24,54 +24,51 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=sst_bp.f0
-  LAMBDA = 6287.93978343 - 6304.70643827
-  DLAMBDA = 0.0086739031758
+  NAME=/home/milic/inversion_code/results/HINODE/synth/50G_ngray_fe_6300_synth_degraded_resampled.f0
+  LAMBDA = 6300.0-6303.0
+  DLAMBDA = 0.01
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 1
-  XRANGE = 1,1
-  YRANGE = 1,1
-  LRANGE = 1,1900
-  MASK = iron_lines_mask.dat
+  XRANGE = 1,100
+  YRANGE = 1,100
+  LRANGE = 51,301
+  MASK = ones_301.dat
   SCATTERED_LIGHT = 0.0
-  SPECTRAL_BROADENING = 41
-  OBSERVED_CONTINUUM = 567.8
-  CGS_CONTINUUM = 3.1206E14
+  SPECTRAL_BROADENING = 20
+  OBSERVED_CONTINUUM = 3.13606E14
+  CGS_CONTINUUM = 3.13606E14
+  ITERATIONS=15
+  STARTING_LAMBDA=1E3
 }
 
 
 model{
   ID=Model 1
   READ_FROM_FILE=0
-  FILENAME=/home/milic/inversion_code/results/Na_2016-07-03/401_800_0_139/C2/mag_test_nodes_smeared_1.0.f0
+  FILENAME=/home/milic/inversion_code/results/HINODE/inv_synth/C12/compressed_nodes_5.0.f0
   parameter{
   ID=TEMP
-  TAU=-3.7,-2.7,-0.7,0.0
-  VALUES=5500.0,4800.0,5200.0,6200.0
+  TAU=-2.2,-0.9,0.0
+  VALUES=4800.0,5200.0,6200.0
   }
   parameter{
   ID=VT
-  TAU=-2.7,-0.7,0.0
-  VALUES=1E5,0.5E5,-0.5E5
+  TAU=0
+  VALUES=1E4
   }
   parameter{
   ID=VS
-  TAU=-2.7,-0.7,0.0
-  VALUES=1E5,0.5E5,-0.5E5
+  TAU=0
+  VALUES=1E5
   }
   parameter{
   ID=B
-  TAU=-3.7,-2.7,-0.7,0.0
-  VALUES=250.0,300.0,350.0,400.0
+  TAU=0
+  VALUES=500.0
   }
   parameter{
   ID=THETA
-  TAU=0
-  VALUES=-75.0
-  }
-  parameter{
-  ID=PHI
   TAU=0
   VALUES=-75.0
   }
