- Slight changes in plotting and re/post processing files - removed hard-coded 3km/s turbulent velocity that was added for 3d cubes

--- a/cfg/invert_iron_6300.cfg
+++ b/cfg/invert_iron_6300.cfg
@@ -45,32 +45,42 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
-  FILENAME=/home/milic/inversion_code/results/HINODE/inv_synth/C12/compressed_nodes_5.0.f0
+  READ_FROM_FILE=1
+  FILENAME=/home/milic/inversion_code/results/HINODE/inv_synt/inv_take_1_non_reg/C2/inverted_nodes_3.0.f0
   parameter{
   ID=TEMP
-  TAU=-2.2,-0.9,0.0
-  VALUES=4800.0,5200.0,6200.0
+  TAU=-2.3,-0.9,0.0
+  VALUES=5000.0,6000.0,7000.0
+  REG_TYPE=0
+  REG_ALPHA=2E15
   }
   parameter{
   ID=VT
   TAU=0
   VALUES=1E4
+  REG_TYPE=1
+  REG_ALPHA=1E14
   }
   parameter{
   ID=VS
-  TAU=0
-  VALUES=1E5
+  TAU=-1.7,-0.5,0.5
+  VALUES=1E5,0,-1E5
+  REG_TYPE=0
+  REG_ALPHA=1E15
   }
   parameter{
   ID=B
-  TAU=0
-  VALUES=500.0
+  TAU=-2.0,0.0
+  VALUES=300,500
+  REG_TYPE=0
+  REG_ALPHA=5E15
   }
   parameter{
   ID=THETA
   TAU=0
   VALUES=-75.0
+  EG_TYPE=0
+  REG_ALPHA=5E15
   }
 }
 
