--- a/cfg/invert_ir_iron_synth.cfg
+++ b/cfg/invert_ir_iron_synth.cfg
@@ -24,53 +24,47 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_SYNTH/full_stokes/one.f0
+  NAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_SYNTH/full_stokes/50G.ngrey.288x100x288_smeared_degraded_resampled_binned_1.3.f0
   LAMBDA = 15640.0 - 15670.0
   DLAMBDA = 0.06
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
-  YRANGE = 1,1
+  XRANGE = 1,96
+  YRANGE = 1,96
   LRANGE = 51,451
   MASK = mask_ir_synth_501.dat
   SCATTERED_LIGHT = 0
   SPECTRAL_BROADENING = 150.0
   OBSERVED_CONTINUUM = 4.42E13
   CGS_CONTINUUM = 4.42E13
-  ITERATIONS=40
+  ITERATIONS=50
   STARTING_LAMBDA=1E3
 }
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
-  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/degraded_spectrally/C24/inverted_nodes_0.2.f0
+  READ_FROM_FILE=1
+  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/degraded_spectrally_spatially_0.3_binned_3x3/version_1.3/C5/inverted_nodes_c.f0
   parameter{
   ID=TEMP
-  TAU=-3.2,-2.8,-2.4,-2.0,-1.6,-1.2,-0.8,-0.4,0.0,0.4,0.8
-  VALUES=4500,4600,4700,4800,4900,5000,5100,5200,5500,6500,7000
+  TAU=-3.2,-2.1,-1.2,-0.5,0.0,0.5
+  VALUES=5000.0,4800.0,5000.0,5500.0,6600.0,7000.0
   }
   parameter{
   ID=VT
   TAU=0
   VALUES=1E4
-  REG_TYPE=2
-  REG_ALPHA=2E13
   }
   parameter{
   ID=VS
   TAU=-2.0,-0.8,0.0,0.5
   VALUES=1E5,0,-5E4,-1E5
-  REG_TYPE=2
-  REG_ALPHA=1E12
   }
   parameter{
   ID=B
   TAU=-2.0,-0.8,0.0,0.5
   VALUES=300.0,400.0,800.0,1000.0
-  REG_TYPE=2
-  REG_ALPHA=1E12
   }
   parameter{
   ID=THETA
