--- a/cfg/invert_iron_6300.cfg
+++ b/cfg/invert_iron_6300.cfg
@@ -38,7 +38,7 @@ obs{
   SPECTRAL_BROADENING = 20
   OBSERVED_CONTINUUM = 3.13606E14
   CGS_CONTINUUM = 3.13606E14
-  ITERATIONS=15
+  ITERATIONS=40
   STARTING_LAMBDA=1E3
 }
 
@@ -46,11 +46,11 @@ obs{
 model{
   ID=Model 1
   READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/results/HINODE/inv_synt/inv_take_1_non_reg/C2/inverted_nodes_3.0.f0
+  FILENAME=/home/milic/inversion_code/results/HINODE/inv_synt/inv_take_1_non_reg/C15/inverted_nodes_c.f0
   parameter{
   ID=TEMP
-  TAU=-2.3,-0.9,0.0
-  VALUES=5000.0,6000.0,7000.0
+  TAU=-3.2,-2.1,-1.2,-0.5,0.0,0.5
+  VALUES=4000.0,4500.0,5000.0,6000.0,7000.0,7500.0
   REG_TYPE=0
   REG_ALPHA=2E15
   }
@@ -58,20 +58,20 @@ model{
   ID=VT
   TAU=0
   VALUES=1E4
-  REG_TYPE=1
+  REG_TYPE=0
   REG_ALPHA=1E14
   }
   parameter{
   ID=VS
-  TAU=-1.7,-0.5,0.5
-  VALUES=1E5,0,-1E5
+  TAU=-2.0,-0.8,0.0,0.5
+  VALUES=1E5,0,-1E5,-2E5
   REG_TYPE=0
   REG_ALPHA=1E15
   }
   parameter{
   ID=B
-  TAU=-2.0,0.0
-  VALUES=300,500
+  TAU=-2.0,-0.8,0.0,0.5
+  VALUES=300,500,600,800
   REG_TYPE=0
   REG_ALPHA=5E15
   }
