--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=BIFROST_en024048_bin_1x1_101_300_101_300.f0
+  FILE=50G.ngrey.288x100x288.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -13,14 +13,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=sodium_BIFROST_test.f0
-  LAMBDA = 5887.0 - 5897.0
-  DLAMBDA = 0.01
+  NAME=fe_6300_test_synth.f0
+  LAMBDA = 6300.0-6303.0
+  DLAMBDA = 0.005
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,50
-  YRANGE = 1,50
+  XRANGE = 1,288
+  YRANGE = 1,288
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.04
