We implemented a method for taking into account opacity fudging It is read from a file and stored in the atmosphere Then the function get_opacity_fudge(lambda) is called, and it returns opacity fudge multiplied by the factor from Busa et al (2001) Warning: This meeans that Busa et al method now is used ALL THE TIME! Opacity fudge is then manually taken into account on boundfree and freefree opacity and emissivity methods of both atoms and the h_minus_mol

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -5,8 +5,8 @@ ATOM=helium.cfg
 ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
-ATOM=magnesium.cfg
+ATOM=magnesium_bline_coll.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron_6300.cfg
+ATOM=iron.cfg
