--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -4,19 +4,10 @@ atmos{
   FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-#  ID=MuRAM snapshot
-#  TYPE=MuRAM
-#  FILE=000000
-#  GEOMETRY=CARTESIAN3D
-#  NX=288
-#  NY=192
-#  NZ=288
-#  DX=20E3
-#  DY=12E3
-#  DZ=20E3
-  
   ATOM=atoms.cfg
   MOL=mol.cfg
+  OF=1
+  OF_FILE=of_sasha.dat
 }
 
 # EL is actually pi - theta, in radians
@@ -24,9 +15,9 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectra_6300.dat
-  LAMBDA = 6300.0-6303.0
-  DLAMBDA = 0.005
+  NAME=spectra_5173.dat
+  LAMBDA = 5170.0-5175.0
+  DLAMBDA = 0.02
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
