Slight changes to atomic files and python functions

--- a/cfg/invert_ir_iron_synth.cfg
+++ b/cfg/invert_ir_iron_synth.cfg
@@ -24,52 +24,53 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_SYNTH/full_stokes/50G.ngrey.288x100x288_smeared_degraded_resampled_binned_1.3.f0
+  NAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_SYNTH/full_stokes/50G.ngrey.288x100x288_synth_0.f0
   LAMBDA = 15640.0 - 15670.0
-  DLAMBDA = 0.06
+  DLAMBDA = 0.02
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,96
-  YRANGE = 1,96
-  LRANGE = 51,451
-  MASK = mask_ir_synth_501.dat
+  XRANGE = 1,100
+  YRANGE = 1,100
+  LRANGE = 161,1331
+  MASK = mask_ir_synth_1501.dat
   SCATTERED_LIGHT = 0
-  SPECTRAL_BROADENING = 150.0
+  SPECTRAL_BROADENING = 0.0
   OBSERVED_CONTINUUM = 4.42E13
   CGS_CONTINUUM = 4.42E13
-  ITERATIONS=50
-  STARTING_LAMBDA=1E3
+  ITERATIONS=30
+  STARTING_LAMBDA=1E2
+
 }
 
 model{
   ID=Model 1
   READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/degraded_spectrally_spatially_0.3_binned_3x3/version_1.3/C5/inverted_nodes_c.f0
+  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/original/4_1_3_2/C2/inverted_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-3.2,-2.1,-1.2,-0.5,0.0,0.5
-  VALUES=5000.0,4800.0,5000.0,5500.0,6600.0,7000.0
+  TAU=-2.2,-0.9,0.0,0.5
+  VALUES=4800.0,5500.0,6600.0,7000.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=1E4
+  VALUES=0
   }
   parameter{
   ID=VS
-  TAU=-2.0,-0.8,0.0,0.5
-  VALUES=1E5,0,-5E4,-1E5
+  TAU=-1.5,-0.5,0.5
+  VALUES=1E5,0,-1E5
   }
   parameter{
   ID=B
-  TAU=-2.0,-0.8,0.0,0.5
-  VALUES=300.0,400.0,800.0,1000.0
+  TAU=-1.5,0.3
+  VALUES=400.0,800.0
   }
   parameter{
   ID=THETA
   TAU=0
-  VALUES=30.0
+  VALUES=80.0
   }
 }
 
