--- a/cfg/atoms_10830.cfg
+++ b/cfg/atoms_10830.cfg
@@ -8,5 +8,6 @@ ATOM=oxygen.cfg
 ATOM=magnesium.cfg
 ATOM=calcium_10835.cfg
 ATOM=silicon_10827.cfg
+ATOM=sodium_10834.cfg
 ATOM=aluminium.cfg
 ATOM=iron.cfg
