--- a/cfg/invert_ir_iron_synth.cfg
+++ b/cfg/invert_ir_iron_synth.cfg
@@ -30,8 +30,8 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,100
-  YRANGE = 1,100
+  XRANGE = 1,288
+  YRANGE = 1,288
   LRANGE = 161,1331
   MASK = mask_ir_synth_1501.dat
   SCATTERED_LIGHT = 0
@@ -39,17 +39,17 @@ obs{
   OBSERVED_CONTINUUM = 4.42E13
   CGS_CONTINUUM = 4.42E13
   ITERATIONS=30
-  STARTING_LAMBDA=1E2
+  STARTING_LAMBDA=1E3
 
 }
 
 model{
   ID=Model 1
   READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/original/4_1_3_2/C2/inverted_nodes.f0
+  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/original/full_field/5_1_4_2/C1/inverted_nodes_2.0.f0
   parameter{
   ID=TEMP
-  TAU=-2.2,-0.9,0.0,0.5
+  TAU=-3.4,-2.0,-0.8,0.0,0.5
   VALUES=4800.0,5500.0,6600.0,7000.0
   }
   parameter{
@@ -59,8 +59,8 @@ model{
   }
   parameter{
   ID=VS
-  TAU=-1.5,-0.5,0.5
-  VALUES=1E5,0,-1E5
+  TAU=-2.5,-1.5,-0.5,0.8
+  VALUES=2E5,1E5,0,-1E5
   }
   parameter{
   ID=B
