--- a/cfg/invert_test.cfg
+++ b/cfg/invert_test.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_36.dat
+  FILE=falc_41.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,20 +24,22 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=cube_test_3.f0
+  NAME=/home/milic/data_SST_MvN/mag_region_401_800_0_139.f0
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,10
-  YRANGE = 1,10
+  XRANGE = 1,140
+  YRANGE = 1,100
   LRANGE = 1,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.05
   SPECTRAL_BROADENING = 50.0
   OBSERVED_CONTINUUM = 28.4
   CGS_CONTINUUM = 3.275E14
+  ITERATIONS = 30
+  STARTING_LAMBDA=1E3
 }
 
 
@@ -47,18 +49,18 @@ model{
   FILENAME=NONE
   parameter{
   ID=TEMP
-  TAU=-2.9,-1.7,-0.7,0.0
+  TAU=-2.7,-1.5,-0.6,0.0
   VALUES=5600.0,4800.0,5200.0,6200.0
   }
   parameter{
   ID=VS
-  TAU=-3.5,-1.7,-0.5
-  VALUES=1E5,0.5E5,-0.5E5
+  TAU=-3.3-0.5
+  VALUES=1E5,-0.5E5
   }
   parameter{
   ID=B
-  TAU=-3.0,-1.7,-0.5
-  VALUES=1500.0,1300.0,1200.0
+  TAU=-2.8,-0.5
+  VALUES=500.0,1200.0
   }
   parameter{
   ID=THETA
