--- a/cfg/magnesium_debug.cfg
+++ b/cfg/magnesium_debug.cfg
@@ -1,17 +1,17 @@
+# 6 lvl atom
 atom{
   NAME=Magnesium
   ID=Mg
   Z=2
   MASS=24.305
-  ABUND=3.98E-5
-#
+  ABUND=3.89E-5
+  NLTE=1
   ion{
     CHARGE=0
     EION=7.664
     partition{
       TYPE=TRAV
       G0=1
-      #
       trav{
         XION=7.664
         G2=4
@@ -21,8 +21,162 @@ atom{
         ASYMP=Fischel
       }
     }
+    level{
+       N=1
+       EE=0      
+       G=1
+       J=0
+       L=0
+       GL=0
+       bf{
+        TYPE=TAB
+        LAMBDA=80.99, 220.16, 384.40, 506.60, 644.88, 659.01, 708.88, 799.82, 963.65, 1045.06, 1080.25, 1165.40, 1265.05, 1369.63, 1507.98, 1635.00
+        VALUE=9.4262e-21, 8.3040e-20, 1.7728e-19, 1.8387e-19, 1.8703e-19, 2.2875e-19, 2.1602e-19, 1.7391e-19, 1.3365e-19, 1.4733e-19, 1.3396e-19, 3.6223e-19, 4.0353e-19, 4.6032e-19, 4.6385e-19, 4.6446e-19
+        }
+    }
+    level{
+        N=2
+        EE=2.7091049
+        G=1
+        J=0
+        L=1
+        GL=0
+        A=1.0e+0
+        bf{
+          TYPE=TAB
+          LAMBDA=138.47, 252.31, 399.67, 596.24, 799.46, 1000.95, 1152.53, 1349.95, 1409.28, 1489.61, 1603.84, 1641.81, 1670.65, 1761.55, 1897.74, 2058.26, 2273.76, 2531.23
+          VALUE=8.6925e-21, 2.9204e-20, 8.7645e-20, 1.6224e-19, 2.4382e-19, 4.2879e-19, 6.4554e-19, 1.0179e-18, 1.7243e-18, 3.6132e-18, 4.1207e-18, 4.9368e-18, 5.2993e-18, 5.3735e-18, 5.4007e-18, 5.4213e-18, 5.4351e-18, 5.4420e-18
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=1
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=5.01e-9, 1.79e-8, 3.18e-8, 3.19e-8, 3.04e-8
+        }
+     }
+    level{
+        N=3
+        EE=2.7115919
+        G=3
+        J=2
+        L=1
+        GL=1.501
+        A=1.0e+0, 1.0e+0
+        bf{
+          TYPE=TAB
+          LAMBDA=138.47, 252.31, 399.67, 596.24, 799.46, 1000.95, 1152.53, 1349.95, 1409.28, 1489.61, 1603.84, 1641.81, 1670.65, 1761.55, 1897.74, 2058.26, 2273.76, 2531.23
+          VALUE=8.6925e-21, 2.9204e-20, 8.7645e-20, 1.6224e-19, 2.4382e-19, 4.2879e-19, 6.4554e-19, 1.0179e-18, 1.7243e-18, 3.6132e-18, 4.1207e-18, 4.9368e-18, 5.2993e-18, 5.3735e-18, 5.4007e-18, 5.4213e-18, 5.4351e-18, 5.4420e-18
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=1
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=5.01e-9, 1.79e-8, 3.18e-8, 3.19e-8, 3.04e-8
+        }
+    }
+    level{
+        N=4
+        EE=2.7166398
+        G=5
+        J=4
+        L=1
+        GL=1.501
+        A=1.0e+0, 1.0e+0, 1.0e+0
+        bf{
+          TYPE=TAB
+          LAMBDA=138.47, 252.31, 399.67, 596.24, 799.46, 1000.95, 1152.53, 1349.95, 1409.28, 1489.61, 1603.84, 1641.81, 1670.65, 1761.55, 1897.74, 2058.26, 2273.76, 2531.23
+          VALUE=8.6925e-21, 2.9204e-20, 8.7645e-20, 1.6224e-19, 2.4382e-19, 4.2879e-19, 6.4554e-19, 1.0179e-18, 1.7243e-18, 3.6132e-18, 4.1207e-18, 4.9368e-18, 5.2993e-18, 5.3735e-18, 5.4007e-18, 5.4213e-18, 5.4351e-18, 5.4420e-18
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=1
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=5.01e-9, 1.79e-8, 3.18e-8, 3.19e-8, 3.04e-8
+        }
+    }
+    level{
+        N=5
+        EE=4.3458028
+        G=3
+        J=2
+        L=1
+        GL=1.000
+        A=4.91e+8, 1.0e+0, 1.0e+0, 1.0e+0
+        bf{
+          TYPE=TAB
+          LAMBDA=90.86, 580.16, 849.97, 1099.90, 1420.50, 1629.83, 1668.37, 1730.98, 1890.84, 2114.39, 2698.93, 2900.53, 2973.88, 3083.58, 3481.67, 3895.10
+          VALUE=7.8488e-21, 1.5141e-19, 2.3608e-19, 4.0388e-19, 9.1398e-19, 9.8505e-19, 1.9709e-18, 1.8742e-18, 1.9243e-17, 4.5876e-17, 4.9809e-17, 5.2070e-17, 5.4785e-17, 5.6917e-17, 5.7159e-17, 5.7280e-17
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=1
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=3.95e-8, 5.65e-8, 6.71e-8, 6.93e-8, 7.05e-8
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=2
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=2.18e-6, 6.79e-7, 3.04e-7, 2.25e-7, 1.95e-7
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=3
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=2.18e-6, 6.79e-7, 3.04e-7, 2.25e-7, 1.95e-7
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=4
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=2.18e-6, 6.79e-7, 3.04e-7, 2.25e-7, 1.95e-7
+        }
+    }
+    level{
+        N=6
+        EE=5.1078269
+        G=3
+        J=2
+        L=0
+        GL=2.002
+        A=1.0e+0, 1.13e+7, 3.37e+7, 5.61e+7, 1.0e+0
+        bf{
+          TYPE=TAB
+          LAMBDA=172.04, 449.31, 880.06, 1299.96, 1694.80, 1972.09, 2244.53, 2332.10, 2363.67, 2509.04, 2701.54, 2763.20, 2789.83, 2832.12, 2893.34, 3501.70, 4015.05, 4534.26, 5062.19
+          VALUE=7.3860e-21, 6.2676e-20, 1.6780e-19, 9.9724e-20, 8.0261e-20, 5.2831e-20, 4.3648e-18, 1.3119e-17, 2.0290e-17, 3.3377e-17, 4.7091e-17, 4.9940e-17, 5.0255e-17, 4.9805e-17, 4.7564e-17, 2.5630e-17, 1.3101e-17, 1.1441e-17, 1.1161e-17
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=1
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=4.25e-9, 1.11e-8, 1.54e-8, 1.36e-8, 1.22e-8
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=2
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=7.69e-7, 4.57e-7, 2.55e-7, 1.95e-7, 1.73e-7
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=3
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=7.69e-7, 4.57e-7, 2.55e-7, 1.95e-7, 1.73e-7
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=4
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=7.69e-7, 4.57e-7, 2.55e-7, 1.95e-7, 1.73e-7
+        }
+        cr{
+          TYPE=TAB
+          TO_LVL=5
+          TEMP=1000.0, 2000.0, 5000.0, 8000.0, 10000.0
+          VALUE=5.13e-8, 7.91e-8, 8.09e-8, 6.48e-8, 6.09e-8
+        }
+    }
   }
-#
   ion{
     CHARGE=1
     EION=15.031
@@ -38,42 +192,20 @@ atom{
         ASYMP=Fischel
       }
     }
-     level{
-      N=1
-      EE=0
-      
-#      S->2
-#      P->6
-      
-      G=2
-      J=1
-      L=0
-      bf{
-        TYPE=HYD
-        LAMBDA= 314,  489,  547,  622,  720,  831,  856
-        VALUE= 1.572, 2.208, 2.296, 2.382, 2.233, 1.947, 1.859 
-      }
-    }
     level{
-      N=2
-      EE=4.422431
-
-#      S->2
-#      P->6
-#      D->10
-      
-      G=2
-      J=1
-      L=1
-      A=2.550E+08
-      bf{
-        TYPE=HYD
-        LAMBDA= 328, 460, 592, 680, 772, 893, 1060, 1218
-        VALUE= 1.957, 2.663, 2.766, 2.718, 2.682, 2.788, 3.565, 5.548
-      }
+        N=1
+        EE=0
+        G=2
+        J=1
+        L=0
+        GL=0
+        bf{
+          TYPE=TAB
+          LAMBDA=315.49, 366.12, 398.07, 436.12, 482.21, 514.86, 552.25, 595.50, 628.30, 664.93, 706.09, 752.68, 778.36, 835.37, 867.12
+          VALUE=1.5720e-19, 1.8210e-19, 1.9480e-19, 2.0720e-19, 2.1870e-19, 2.2480e-19, 2.2960e-19, 2.3250e-19, 2.3280e-19, 2.3110e-19, 2.2680e-19, 2.1870e-19, 2.1290e-19, 1.9670e-19, 1.8590e-19
+        }
     }
   }
-#
   ion{
     CHARGE=2
     partition{
