--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -5,8 +5,10 @@ ATOM=helium.cfg
 ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
-ATOM=magnesium_bline_coll.cfg
+#ATOM=magnesium_debug.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron.cfg
+ATOM=iron_5892.cfg
+ATOM=sodium.cfg
+ATOM=nickel.cfg
