added stokes weights to cfg filewqX

--- a/cfg/invert_ir_iron_synth.cfg
+++ b/cfg/invert_ir_iron_synth.cfg
@@ -38,28 +38,27 @@ obs{
   SPECTRAL_BROADENING = 0.0
   OBSERVED_CONTINUUM = 4.42E13
   CGS_CONTINUUM = 4.42E13
-  ITERATIONS=30
-  STARTING_LAMBDA=1E3
-
+  ITERATIONS=5
+  STARTING_LAMBDA=1E2
 }
 
 model{
   ID=Model 1
   READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/original/full_field/5_1_4_2/C1/inverted_nodes_2.0.f0
+  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/original/full_field/5_1_4_2/C5/inverted_nodes_c.f0
   parameter{
   ID=TEMP
   TAU=-3.4,-2.0,-0.8,0.0,0.5
-  VALUES=4800.0,5500.0,6600.0,7000.0
+  VALUES=4800.0,5500.0,6000.0,6600.0,7000.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=0
+  VALUES=1E4
   }
   parameter{
   ID=VS
-  TAU=-2.5,-1.5,-0.5,0.8
+  TAU=-2.5,-1.5,-0.5,0.5
   VALUES=2E5,1E5,0,-1E5
   }
   parameter{
