--- a/cfg/invert_iron_6300.cfg
+++ b/cfg/invert_iron_6300.cfg
@@ -3,19 +3,8 @@ atmos{
   TYPE=SPINOR
   FILE=falc_41.dat
   GEOMETRY=PLANEPARALLEL
-  RTSOLVER=Bezier
-#  ID=MuRAM snapshot
-#  TYPE=MuRAM
-#  FILE=000000
-#  GEOMETRY=CARTESIAN3D
-#  NX=288
-#  NY=192
-#  NZ=288
-#  DX=20E3
-#  DY=12E3
-#  DZ=20E3
-  
-  ATOM=atoms.cfg
+  RTSOLVER=Bezier  
+  ATOM=atoms_6300.cfg
   MOL=mol.cfg
 }
 
@@ -30,59 +19,51 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 1
-  XRANGE = 1,100
-  YRANGE = 1,100
+  XRANGE = 1,288
+  YRANGE = 1,288
   LRANGE = 51,301
   MASK = ones_301.dat
   SCATTERED_LIGHT = 0.0
   SPECTRAL_BROADENING = 20
   OBSERVED_CONTINUUM = 3.13606E14
   CGS_CONTINUUM = 3.13606E14
-  ITERATIONS=40
+  ITERATIONS=25
   STARTING_LAMBDA=1E3
+  STOKES_WEIGHTS=1.0,0.0,0.0,1.0
 }
 
 
 model{
   ID=Model 1
   READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/results/HINODE/inv_synt/inv_take_1_non_reg/C15/inverted_nodes_c.f0
+  FILENAME=/home/milic/inversion_code/results/HINODE/inv_synt/inv_take_1_non_reg/full_field/C21/inverted_nodes_4.0.f0
   parameter{
-  ID=TEMP
-  TAU=-3.2,-2.1,-1.2,-0.5,0.0,0.5
-  VALUES=4000.0,4500.0,5000.0,6000.0,7000.0,7500.0
-  REG_TYPE=0
-  REG_ALPHA=2E15
+    ID=TEMP
+    TAU=-2.5,-0.9,0.0
+    VALUES=5500.0,6000.0,6500.0
   }
   parameter{
-  ID=VT
-  TAU=0
-  VALUES=1E4
-  REG_TYPE=0
-  REG_ALPHA=1E14
+    ID=VT
+    TAU=0
+    VALUES=1E4
   }
   parameter{
-  ID=VS
-  TAU=-2.0,-0.8,0.0,0.5
-  VALUES=1E5,0,-1E5,-2E5
-  REG_TYPE=0
-  REG_ALPHA=1E15
+    ID=VS
+    TAU=-2.0,0.0
+    VALUES=1E5,0,-1E5
   }
   parameter{
-  ID=B
-  TAU=-2.0,-0.8,0.0,0.5
-  VALUES=300,500,600,800
-  REG_TYPE=0
-  REG_ALPHA=5E15
+    ID=B
+    TAU=-2.0,0.0
+    VALUES=500,800
   }
   parameter{
-  ID=THETA
-  TAU=0
-  VALUES=-75.0
-  EG_TYPE=0
-  REG_ALPHA=5E15
+    ID=THETA
+    TAU=0
+    VALUES=-75.0
   }
 }
+
 
 #LAMBDA = 5895.0 - 5897.0
 #LAMBDA = 4339.4 - 4340.0
