--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -4,20 +4,20 @@ atmos{
   FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms.cfg
+  ATOM=atoms_10830.cfg
   MOL=mol.cfg
-  OF=1
+  OF=0
   OF_FILE=of_sasha.dat
 }
 
 # EL is actually pi - theta, in radians
 obs{
   ID=Obs 1
-  EL=3.14159265359
+  EL=1.67096374796
   AZ=0.0
-  NAME=spectra_5173.dat
-  LAMBDA = 5170.0-5175.0
-  DLAMBDA = 0.02
+  NAME=spectra_6173_mu=0.1.dat
+  LAMBDA = 6172.0-6174.0
+  DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
@@ -25,6 +25,7 @@ obs{
   YRANGE = 1,1
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
+  STOKES_WEIGHTS=1,0,0,0
 }
 
 # LAMBDA = 5895.0 - 5897.0
