--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -4,19 +4,17 @@ atmos{
   FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms_10830.cfg
+  ATOM=atoms.cfg
   MOL=mol.cfg
-  OF=0
-  OF_FILE=of_sasha.dat
 }
 
 # EL is actually pi - theta, in radians
 obs{
   ID=Obs 1
-  EL=1.67096374796
+  EL=3.14
   AZ=0.0
-  NAME=spectra_6173_mu=0.1.dat
-  LAMBDA = 6172.0-6174.0
+  NAME=spectra_5892.dat
+  LAMBDA = 5887.0-5897.0
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
@@ -25,24 +23,4 @@ obs{
   YRANGE = 1,1
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
-  STOKES_WEIGHTS=1,0,0,0
 }
-
-# LAMBDA = 5895.0 - 5897.0
-# LAMBDA = 4339.4 - 4340.0
-# LAMBDA = 4607.13 - 4607.53
-# LAMBDA = 6562.8-6564.6
-# LAMBDA = 6561.3-6564.3
-# LAMBDA = 8540.6-8543.6
-# LAMBDA = 6560.0-6565.6
-# LAMBDA = 1215.15 - 1215.55
-# LAMBDA = 4859.0 - 4863.0
-# LAMBDA = 6301.0 - 6303.0
-# LAMBDA = 5246.0 - 5251.0
-# LAMBDA = 15647.0 - 15654.0
-# LAMBDA = 4077.0-4078.5
-# EL=3.14159265359 # mu = 1
-# EL=1.7112577415047523 #mu = 0.14
-
-# LAMBDA = 5887.7914658 - 5897.18400651
-# DLAMBDA = 0.00972312703583
