some small hacks trying to reconcile my inversion with Andi's

--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -4,7 +4,7 @@ atmos{
   FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms.cfg
+  ATOM=atoms_ir.cfg
   MOL=mol.cfg
 }
 
@@ -13,9 +13,9 @@ obs{
   ID=Obs 1
   EL=3.14
   AZ=0.0
-  NAME=spectra_5892.dat
-  LAMBDA = 5887.0-5897.0
-  DLAMBDA = 0.01
+  NAME=spectra_15600.dat
+  LAMBDA = 15642.0 - 15670.0
+  DLAMBDA = 0.05
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
