Bookkeeping some files

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -5,9 +5,8 @@ ATOM=helium.cfg
 ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
-ATOM=calcium.cfg
-ATOM=silicon.cfg
+ATOM=calcium_10835.cfg
+ATOM=silicon_10827_nlte.cfg
 ATOM=aluminium.cfg
-ATOM=nickel.cfg
-ATOM=sodium.cfg
-ATOM=iron_5892.cfg
+ATOM=iron.cfg
+ATOM=sodium_10834.cfg
