--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -5,8 +5,9 @@ ATOM=helium.cfg
 ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
-ATOM=calcium_10835.cfg
-ATOM=silicon_10827_nlte.cfg
+ATOM=calcium.cfg
+ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron.cfg
-ATOM=sodium_10834.cfg
+ATOM=iron_5892.cfg
+ATOM=sodium.cfg
+ATOM=nickel.cfg
