--- a/cfg/invert_ir_iron_synth.cfg
+++ b/cfg/invert_ir_iron_synth.cfg
@@ -24,42 +24,42 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_SYNTH/full_stokes/50G.ngrey.288x100x288_synth_0.f0
+  NAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_SYNTH/full_stokes/50G.ngrey.288x100x288_synth_degraded_resampled.f0
   LAMBDA = 15640.0 - 15670.0
-  DLAMBDA = 0.02
+  DLAMBDA = 0.06
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
   XRANGE = 1,288
   YRANGE = 1,288
-  LRANGE = 161,1331
-  MASK = mask_ir_synth_1501.dat
+  LRANGE = 51,451
+  MASK = mask_ir_synth_501.dat
   SCATTERED_LIGHT = 0
-  SPECTRAL_BROADENING = 0.0
+  SPECTRAL_BROADENING = 150.0
   OBSERVED_CONTINUUM = 4.42E13
   CGS_CONTINUUM = 4.42E13
-  ITERATIONS=5
-  STARTING_LAMBDA=1E2
+  ITERATIONS=-20
+  STARTING_LAMBDA=1E3
 }
 
 model{
   ID=Model 1
   READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/original/full_field/5_1_4_2/C5/inverted_nodes_c.f0
+  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/degraded_spectrally/full_field/5_1_5_2/C2/inverted_nodes.f0
   parameter{
   ID=TEMP
   TAU=-3.4,-2.0,-0.8,0.0,0.5
-  VALUES=4800.0,5500.0,6000.0,6600.0,7000.0
+  VALUES=4800.0,5500.0,6600.0,7000.0,8000.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=1E4
+  VALUES=0
   }
   parameter{
   ID=VS
-  TAU=-2.5,-1.5,-0.5,0.5
-  VALUES=2E5,1E5,0,-1E5
+  TAU=-2.5,-1.5,-0.5,0.5,1.0
+  VALUES=2E5,1E5,0,-1E5,-1.2E5
   }
   parameter{
   ID=B
