--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,10 +1,10 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=sir_output.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms_ir.cfg
+  ATOM=atoms.cfg
   MOL=mol.cfg
 }
 
@@ -13,9 +13,9 @@ obs{
   ID=Obs 1
   EL=3.14
   AZ=0.0
-  NAME=spectra_15600.dat
-  LAMBDA = 15642.0 - 15670.0
-  DLAMBDA = 0.05
+  NAME=spectra_5892.dat
+  LAMBDA = 5888.0 - 5892.0
+  DLAMBDA = 0.005
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
