--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -8,6 +8,5 @@ ATOM=oxygen.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron_5892.cfg
-ATOM=sodium.cfg
-ATOM=nickel.cfg
+ATOM=iron.cfg
+ATOM=nickel_6768.cfg
