--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=sir_output.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -13,8 +13,8 @@ obs{
   ID=Obs 1
   EL=3.14
   AZ=0.0
-  NAME=spectra_5892.dat
-  LAMBDA = 5888.0 - 5892.0
+  NAME=spectra_6768.dat
+  LAMBDA = 6767.5 - 6768.5
   DLAMBDA = 0.005
   INVERT=0
   RETURN_ATMOS = 1
