Modified a bunch of cfg files and changed some python routines. Just keeping things up to date.

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -8,5 +8,6 @@ ATOM=oxygen.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron.cfg
-ATOM=nickel_6768.cfg
+ATOM=iron_5892.cfg
+ATOM=nickel_5892.cfg
+ATOM=sodium_D.cfg
