--- a/cfg/invert_na_sst.cfg
+++ b/cfg/invert_na_sst.cfg
@@ -13,8 +13,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/data_SST_MvN/scan4/onepixel.f0
-  LGRID=/home/milic/data_SST_MvN/scan4/na_lgrid.dat
+  NAME=cfg/onepixel.f0
+  LGRID=na_lgrid.dat
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
@@ -22,11 +22,11 @@ obs{
   YRANGE = 1,1
   LRANGE =1,907
   MASK = sodium_lines_mask.dat
-  SCATTERED_LIGHT = 0.05
+  SCATTERED_LIGHT = 0.00
   SPECTRAL_BROADENING = 50.0
   OBSERVED_CONTINUUM = 28.4
   CGS_CONTINUUM = 3.275E14
-  ITERATIONS=15
+  ITERATIONS=10
   STARTING_LM=1E3
   STOKES_WEIGHTS=1.0,0.0,0.0,1.0
 }
@@ -38,8 +38,8 @@ model{
   FILENAME=inverted_nodes_2.0.f0
   parameter{
   ID=TEMP
-  TAU=-2.5,-1.4,-0.6,0.0
-  VALUES=4500.0,5000.0,5500.0,6500.0
+  TAU=-3.5,-2.5,-2.0,-1.4,-0.6,0.0
+  VALUES=4500.0,4600.0,5000.0,5300.0,5500.0,6500.0
   }
   parameter{
   ID=VT
