--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -13,10 +13,11 @@ obs{
   ID=Obs 1
   EL=3.14
   AZ=0.0
-  NAME=spectra_6768.dat
-  LAMBDA = 6767.5 - 6768.5
-  DLAMBDA = 0.005
+  NAME=spectra_5890.dat
+  LAMBDA = 5887.0-5897.0
+  DLAMBDA = 0.01
   INVERT=0
+  #The keywords below are not needed for synth mode!
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
   XRANGE = 1,1
