--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=BIFROST_en024048_bin_1x1_101_300_101_300_trimmed.f0
+  FILE=/data/slam/home/milic/cubes/50G.ngrey.288x100x288.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -13,14 +13,15 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=na_test.f0
-  LAMBDA = 5887.0-5897.0
-  DLAMBDA = 0.02
+  NAME=hinode_test.f0
+  LAMBDA = 6301.0-6303.0
+  DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 123,123
-  YRANGE = 24,24
+  XRANGE = 1,288
+  YRANGE = 1,288
+  #everything after not important
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.04
