--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -14,7 +14,7 @@ obs{
   EL=3.14
   AZ=0.0
   NAME=spectra_5890.dat
-  LAMBDA = 5887.0-5897.0
+  LAMBDA = 5892.0 - 5897.0
   DLAMBDA = 0.01
   INVERT=0
   #The keywords below are not needed for synth mode!
