changed slightly atmos_pop.cc, and various config files after giving a talk and practicing at IAP

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -8,6 +8,5 @@ ATOM=oxygen.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron_5892.cfg
-ATOM=nickel_5892.cfg
+ATOM=iron.cfg
 ATOM=sodium_D.cfg
