--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=falc_1000.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -13,8 +13,8 @@ obs{
   ID=Obs 1
   EL=3.14
   AZ=0.0
-  NAME=spectra_5890.dat
-  LAMBDA = 5892.0 - 5897.0
+  NAME=spectra_5890_test.dat
+  LAMBDA = 5887.0 - 5897.0
   DLAMBDA = 0.01
   INVERT=0
   #The keywords below are not needed for synth mode!
