--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=/data/slam/home/milic/cubes/50G.ngrey.288x100x288.f0
+  FILE=50G.ngrey.288x100x288.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -19,8 +19,8 @@ obs{
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,288
-  YRANGE = 1,288
+  XRANGE = 1,20
+  YRANGE = 1,20
   #everything after not important
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
