--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,10 +1,10 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=50G.ngrey.288x100x288.f0
+  FILE=inverted_atmos_t.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms.cfg
+  ATOM=atoms_ir.cfg
   MOL=mol.cfg
 }
 
@@ -13,14 +13,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=hinode_test.f0
-  LAMBDA = 6301.0-6303.0
-  DLAMBDA = 0.01
+  NAME=sanity_check.f0
+  LAMBDA = 15640.0 - 15670.0
+  DLAMBDA = 0.05
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,20
-  YRANGE = 1,20
+  XRANGE = 1,1
+  YRANGE = 1,1
   #everything after not important
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
