added functions for opacity and emissivity _lte only and _active_only so that background oapcity does not have to be re-calculated at each iteration. This speeds up nlte iterations by a factor of two in case of ca II 8542 for example.

--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_1000.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -13,8 +13,8 @@ obs{
   ID=Obs 1
   EL=3.14
   AZ=0.0
-  NAME=spectra_5890_test.dat
-  LAMBDA = 5887.0 - 5897.0
+  NAME=spectra_6300.dat
+  LAMBDA = 6301.0 - 6303.0
   DLAMBDA = 0.01
   INVERT=0
   #The keywords below are not needed for synth mode!
