--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -13,8 +13,8 @@ obs{
   ID=Obs 1
   EL=3.14
   AZ=0.0
-  NAME=spectra_6300.dat
-  LAMBDA = 6301.0 - 6303.0
+  NAME=spectra_D.dat
+  LAMBDA = 5887.0 - 5897.0
   DLAMBDA = 0.01
   INVERT=0
   #The keywords below are not needed for synth mode!
