--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=qs_210000_1_400_1_400_360_479.f0
+  FILE=atmos_simple.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms_ir.cfg
@@ -13,14 +13,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=qs_210000_1_400_1_400_360_479_synth.f0
+  NAME=50G.ngrey.288x100x288_simplified_synth.f0
   LAMBDA = 15640.0 - 15670.0
   DLAMBDA = 0.06
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,400
-  YRANGE = 1,400
+  XRANGE = 1,288
+  YRANGE = 1,288  
   #everything after not important
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
