--- a/cfg/invert_crisp_8542.cfg
+++ b/cfg/invert_crisp_8542.cfg
@@ -1,4 +1,4 @@
-  atmos{
+atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
   FILE=falc_41.dat
@@ -24,42 +24,42 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/Desktop/ca_h_test.f0
-  LAMBDA = 3967.142-3999.98
-  DLAMBDA = 0.078
+  NAME=/home/milic/data/CRISP/crisp_subregion.f0
+  LGRID = crisp_wvl.dat
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
   XRANGE = 1,1
-  YRANGE = 1,1
-  LRANGE = 1,422
-  MASK = mask_422.dat
+  YRANGE = 101,101
+  LRANGE = 3,25
   SCATTERED_LIGHT = 0.00
-  SPECTRAL_BROADENING = 130.0
+  SPECTRAL_BROADENING = 0
   OBSERVED_CONTINUUM = 1.0
-  CGS_CONTINUUM = 5.1E14
-  ITERATIONS=10
-  STARTING_LAMBDA=1E2
+  CGS_CONTINUUM = 1.0
+  ITERATIONS=-50
+  STARTING_LM=1E2
+  STOKES_WEIGHTS=1.0,0,0,0
 }
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
+  READ_FROM_FILE=0 
   FILENAME=inverted_nodes.f0
+  TAUGRID = -6.0,0.0
   parameter{
   ID=TEMP
-  TAU=-7.5,-6.0,-4.5,-3.0,-1.5,0.0
-  VALUES=5400.0,5200.0,5000.0,4800.0,5200.0,6500.0
+  TAU=-5.0,-4.0,-2.5,-1.0,0.0
+  VALUES=7000.0,6000.0,4800.0,5200.0,6500.0
   }
   parameter{
   ID=VT
-  TAU=0
-  VALUES=1E5
+  TAU=-5.0,-2.0.,0.0
+  VALUES=7E5,3E5,1E5
   }
   parameter{
   ID=VS
-  TAU=0
-  VALUES=1E5
+  TAU=-5.0,-3.5,-2.0,0.0
+  VALUES=3E5,2E5,1E5,0.0
   }
 }
 
