--- a/cfg/invert_synth_obs.cfg
+++ b/cfg/invert_synth_obs.cfg
@@ -24,50 +24,43 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/inversion_code/results/BIFROST_cube/synth/101_300_101_300_Na_full/BIFROST_en024048_bin_1x1_101_300_101_300_synth_resampled_50_20_noise_1E-3.f0
-  LAMBDA = 5887.0 - 5897.0
-  DLAMBDA = 0.02
+  NAME=/home/milic/data/IRIS/mock_stokes.f0
+  LAMBDA = 8540.0-8545.0
+  DLAMBDA = 0.05
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 41,41
-  YRANGE = 171,171
-  LRANGE = 1,501
-  MASK = ones_501.dat
+  XRANGE = 1,10
+  YRANGE = 1,10
+  LRANGE = 1,101
   SCATTERED_LIGHT = 0.00
-  SPECTRAL_BROADENING = 50.0
-  OBSERVED_CONTINUUM = 3.275E14
-  CGS_CONTINUUM = 3.275E14
+  SPECTRAL_BROADENING = 0
+  OBSERVED_CONTINUUM = 1.0
+  CGS_CONTINUUM = 1.0
+  ITERATIONS=0
+  STARTING_LM=1E3
+  STOKES_WEIGHTS=1.0,0.0,0.0,1.0
 }
 
 model{
   ID=Model 1
   READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/results/BIFROST_cube/inv/subfield/nodes_ver_5/C22/nodes_changed.f0
+  FILENAME=/home/milic/data/IRIS/iris_nodes.f0
+  TAUGRID=-7.7,1.0
   parameter{
   ID=TEMP
-  TAU=-2.5,-1.4,-0.6,0.0
-  VALUES=4500.0,5000.0,5500.0,6500.0
+  TAU=-7.6, -6.4, -5.,  -3.8, -2.6, -1.2,  0.
+  VALUES=5900.0,4000.0,5200.0,6300.0,6000.0,6000.0,6000.0
   }
   parameter{
   ID=VT
-  TAU=0
-  VALUES=1E4
+  TAU=-7.6, -5.,  -2.6,  0.
+  VALUES=0.6E5, 1E5, 1E5,1E5
   }
   parameter{
   ID=VS
-  TAU=-3.3,-0.5
-  VALUES=-1E5,0E5
-  }
-  parameter{
-  ID=B
-  TAU=-2.9,-0.5
-  VALUES=300,600
-  }
-  parameter{
-  ID=THETA
-  TAU=0
-  VALUES=175.0
+  TAU=-7.6, -5.,  -2.6,  0.
+  VALUES=3E5,2E5,1E5,0.0
   }
 }
 
