synth.cfg change

--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_82.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms_ca_ir.cfg
