Deleted an obsolete atmol add: function Extended wavelength grid for integration in spectral lines Increased the number of angular rays to 3 (default). Removed some goofy print statements.

--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -6,6 +6,8 @@ atmos{
   RTSOLVER=Bezier
   ATOM=atoms_ca_ir.cfg
   MOL=mol.cfg
+  OF=1
+  OF_FILE=of_sasha.dat
 }
 
 # EL is actually pi - theta, in radians
@@ -13,8 +15,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectra_8542_falc_82.dat
-  LAMBDA = 8537.0 - 8547.0
+  NAME=spectra_8542.dat
+  LAMBDA = 8532.0 - 8552.0
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
