--- a/cfg/atoms_ca_ir.cfg
+++ b/cfg/atoms_ca_ir.cfg
@@ -6,7 +6,7 @@ ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
 ATOM=magnesium.cfg
-ATOM=calcium_ir.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
 ATOM=iron.cfg
+ATOM=calcium_ir_rh.cfg
