Adding methods for calculation of op_em for all wavelengths together, with boundaries for lower and upper wavelength.

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -5,8 +5,7 @@ ATOM=helium.cfg
 ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
-ATOM=magnesium.cfg
 ATOM=aluminium.cfg
 ATOM=iron.cfg
 ATOM=silicon.cfg
-ATOM=calcium_ir_rh.cfg
+ATOM=magnesium_bline_coll.cfg
