--- a/cfg/synth_mg_b_1d.cfg
+++ b/cfg/synth_mg_b_1d.cfg
@@ -15,7 +15,7 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectra_5173.dat
+  NAME=spectra_5173_new.dat
   LAMBDA = 5168.0-5178.0
   DLAMBDA = 0.02
   INVERT=0
