--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,13 +1,11 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=plage_test.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms_ca_ir.cfg
+  ATOM=atoms_ir.cfg
   MOL=mol.cfg
-  OF=1
-  OF_FILE=of_sasha.dat
 }
 
 # EL is actually pi - theta, in radians
@@ -15,9 +13,9 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectra_8542.dat
-  LAMBDA = 8532.0 - 8552.0
-  DLAMBDA = 0.01
+  NAME=spectra_1.56.dat
+  LAMBDA = 15643.0 - 15667.0
+  DLAMBDA = 0.03
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
