Debugging the ws not being set to one if the file is missing. Also prepping some hinode inversions.

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -6,6 +6,5 @@ ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
 ATOM=aluminium.cfg
-ATOM=iron.cfg
+ATOM=iron_6300.cfg
 ATOM=silicon.cfg
-ATOM=magnesium_bline_coll.cfg
