--- a/cfg/invert_hinode.cfg
+++ b/cfg/invert_hinode.cfg
@@ -24,58 +24,53 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/HINODE_data/test_2008.f0
+  NAME=//home/milic/scratch/lites_qs/lites_qs/20070310_113736/bl_500_1000_1000_1400.f0
   LAMBDA = 6300.87730065 - 6303.25996109
   DLAMBDA = 0.021465409392156878
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,93
-  YRANGE = 1,100
-  LRANGE = 1,90
-  MASK = ones_112.dat
+  XRANGE = 1,1
+  YRANGE = 1,1
+  LRANGE = 1,112
   SCATTERED_LIGHT = 0.00
   SPECTRAL_BROADENING = 42.0
   OBSERVED_CONTINUUM = 25784.0
   CGS_CONTINUUM = 3.117e+14
+  ITERATIONS=30
+  STARTING_LM=1E3
+  STOKES_WEIGHTS=1.0,0.0,0.0,1.0
 }
 
 
 model{
   ID=Model 1
-  READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/results/HINODE/inv_run_1/C9/inverted_nodes_2.0.f0
+  READ_FROM_FILE=0
+  FILENAME=/home/milic/scratch/new_MCMC_fe_inv/mcmc_nodes_full.f0
+  TAUGRID = -5.0,1.0
   parameter{
   ID=TEMP
-  TAU=-2.7,-1.6,-0.7,0.0
-  VALUES=4000.0,5500.0,5800.0,6600.0
+  TAU=-2.5,-1.0,0.0
+  VALUES=6600.0,7000.0,8000.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=1E5
+  VALUES=1E4
   }
   parameter{
   ID=VS
-  TAU=-2.5,-0.5
-  VALUES=1E5,0E5
+  TAU=-1.5,0.0
+  VALUES=2E5,1E5
+  }
+  parameter{
+  ID=B
+  TAU=-1.5,0.0
+  VALUES=200.0,400.0
+  }
+  parameter{
+  ID=THETA
+  TAU=0
+  VALUES=30.0
   }
 }
-
-#LAMBDA = 5895.0 - 5897.0
-#LAMBDA = 4339.4 - 4340.0
-#LAMBDA = 4607.13 - 4607.53
-#LAMBDA = 6562.8-6564.6
-#LAMBDA = 6561.3-6564.3
-#LAMBDA = 8540.6-8543.6
-#LAMBDA = 6560.0-6565.6
-#LAMBDA = 1215.15 - 1215.55
-#LAMBDA = 4859.0 - 4863.0
-#LAMBDA = 6301.0 - 6303.0
-#LAMBDA = 5246.0 - 5251.0
-#LAMBDA = 15647.0 - 15654.0
-#EL=3.14159265359 # mu = 1
-#EL=1.7112577415047523 #mu = 0.14
-
-#LAMBDA = 5887.7914658 - 5897.18400651
-#DLAMBDA = 0.00972312703583
