--- a/cfg/invert_hinode.cfg
+++ b/cfg/invert_hinode.cfg
@@ -24,53 +24,54 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=//home/milic/scratch/lites_qs/lites_qs/20070310_113736/bl_500_1000_1000_1400.f0
+  NAME=/home/milic/scratch/hinode_test_inv/bl_map_500_300.f0
   LAMBDA = 6300.87730065 - 6303.25996109
   DLAMBDA = 0.021465409392156878
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
   XRANGE = 1,1
-  YRANGE = 1,1
-  LRANGE = 1,112
+  YRANGE = 175,175
+  LRANGE = 10,90
   SCATTERED_LIGHT = 0.00
   SPECTRAL_BROADENING = 42.0
-  OBSERVED_CONTINUUM = 25784.0
+  OBSERVED_CONTINUUM = 29785.13
   CGS_CONTINUUM = 3.117e+14
-  ITERATIONS=30
   STARTING_LM=1E3
-  STOKES_WEIGHTS=1.0,0.0,0.0,1.0
+  ITERATIONS=50
+  STOKES_WEIGHTS=1.0,0.0,0.0,4.0
+  STOPPING_CHISQ = 300.0
 }
 
 
 model{
   ID=Model 1
   READ_FROM_FILE=0
-  FILENAME=/home/milic/scratch/new_MCMC_fe_inv/mcmc_nodes_full.f0
-  TAUGRID = -5.0,1.0
+  FILENAME=/data/slam/home/milic/hinode_inv/region_1/C9/inverted_nodes_cnn.f0  
+  TAUGRID = -4.5, 0.5
   parameter{
   ID=TEMP
-  TAU=-2.5,-1.0,0.0
-  VALUES=6600.0,7000.0,8000.0
+  TAU=-3.0,-2.0,-1.0,0.0
+  VALUES=4500.0,5800.0,6600.0,7000.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=1E4
+  VALUES=1E5
   }
   parameter{
   ID=VS
-  TAU=-1.5,0.0
-  VALUES=2E5,1E5
+  TAU=-2.5,-1.2,0.0
+  VALUES=1E5,0E5,1E5
   }
   parameter{
   ID=B
-  TAU=-1.5,0.0
-  VALUES=200.0,400.0
+  TAU=-2.0,0.0
+  VALUES=600.800
   }
   parameter{
   ID=THETA
   TAU=0
-  VALUES=30.0
+  VALUES=60.0
   }
 }
