--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,10 +1,10 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=plage_test.dat
+  FILE=falc_82.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms_ir.cfg
+  ATOM=atoms_ca_ir.cfg
   MOL=mol.cfg
 }
 
@@ -13,9 +13,9 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectra_1.56.dat
-  LAMBDA = 15643.0 - 15667.0
-  DLAMBDA = 0.03
+  NAME=spectra_8542.dat
+  LAMBDA = 8537.0 - 8547.0
+  DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
