--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=new_BIFROST_en024048_bin_1x1_101_300_101_300_atmos_resampled.f0
+  FILE=50G.ngrey.288x100x288_244500.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -14,7 +14,7 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=test.f0
-  LAMBDA = 8537.0 - 8547.0
+  LAMBDA = 6301.0-6303.0
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
