- Added another hack that, in the case of negative populations reverts to lte ones. This looked reasonable. - Removed some debug printfs

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -6,5 +6,6 @@ ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
 ATOM=aluminium.cfg
-ATOM=iron_6300.cfg
+ATOM=iron.cfg
 ATOM=silicon.cfg
+ATOM=calcium_ir_rh.cfg
