--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,11 +1,12 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=50G.ngrey.288x100x288_244500.f0
+  FILE=better_eb_310400_vt.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
   MOL=mol.cfg
+  ELECTRONS=1
 }
 
 #EL is actually pi - theta, in radians
@@ -14,11 +15,11 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=test.f0
-  LAMBDA = 6301.0-6303.0
-  DLAMBDA = 0.01
+  LAMBDA = 8535.0 - 8549.0
+  DLAMBDA = 0.014
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,5
-  YRANGE = 1,5 
+  XRANGE = 85,85
+  YRANGE = 21,21
 }
