--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -4,7 +4,7 @@ atmos{
   FILE=falc_82.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms.cfg
+  ATOM=atoms_ca_ir.cfg
   MOL=mol.cfg
   ELECTRONS=1
 }
@@ -15,8 +15,8 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=spectra_8542.dat
-  LAMBDA = 8535.0 - 8549.0
-  DLAMBDA = 0.014
+  LAMBDA = 8537.0 - 8547.0
+  DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
