Just some routine atomic .cfg files

--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,12 +1,12 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=better_eb_310400_vt.f0
+  FILE=qs_21000_full_binned_3x3.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms_ca_ir.cfg
+  ATOM=atoms.cfg
   MOL=mol.cfg
-  ELECTRONS=1
+  ELECTRONS=0
 }
 
 #EL is actually pi - theta, in radians
@@ -14,12 +14,12 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=test.f0
-  LAMBDA = 8535.0 - 8549.0
-  DLAMBDA = 0.014
+  NAME=qs_21000_full_binned_3x3_continuum.f0
+  LAMBDA = 6301.0-6302.0
+  DLAMBDA = 1.0
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 82,82
-  YRANGE = 20,20
+  XRANGE = 1,512
+  YRANGE = 1,512
 }
