--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,10 +1,10 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_82.dat
+  FILE=muram_test_247_247.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms_ca_ir.cfg
+  ATOM=atoms.cfg
   MOL=mol.cfg
   ELECTRONS=1
 }
@@ -14,14 +14,12 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectra_8542.dat
-  LAMBDA = 8537.0 - 8547.0
-  DLAMBDA = 0.01
+  NAME=muram_test_247_247_synth.dat
+  LAMBDA = 6300.5 - 6303.5
+  DLAMBDA = 0.005
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
   XRANGE = 1,1
   YRANGE = 1,1
-  LRANGE = 495,967
-  MASK = sodium_lines_mask.dat
 }
