Clearing up undeeded comments ...

--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=muram_test_247_247_atmos_tau.f0
+  FILE=50G.ngrey.288x100x288_atmos_61.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -14,12 +14,12 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=muram_test_247_247_atmos_tau_to_invert.f0
-  LAMBDA = 6300.5-6303.5
+  NAME=test.dat
+  LAMBDA = 6300.5 - 6303.5
   DLAMBDA = 0.005
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
-  YRANGE = 1,1
+  XRANGE = 126,126
+  YRANGE = 87,87
 }
