reworking node compariing plot routine to fit all the panels in one plot

--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=50G.ngrey.288x100x288_atmos_61.f0
+  FILE=inverted_atmos_61.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -20,6 +20,6 @@ obs{
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 126,126
-  YRANGE = 87,87
+  XRANGE = 1,1
+  YRANGE = 1,1
 }
