Trying to resurrect the code, new year new snapi!

--- a/cfg/invert_synth_obs.cfg
+++ b/cfg/invert_synth_obs.cfg
@@ -1,22 +1,13 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_41.dat
+  FILE=falc_61.dat
   GEOMETRY=PLANEPARALLEL
-  RTSOLVER=Bezier
-#  ID=MuRAM snapshot
-#  TYPE=MuRAM
-#  FILE=000000
-#  GEOMETRY=CARTESIAN3D
-#  NX=288
-#  NY=192
-#  NZ=288
-#  DX=20E3
-#  DY=12E3
-#  DZ=20E3
-  
+  RTSOLVER=Bezier  
   ATOM=atoms.cfg
   MOL=mol.cfg
+  ELECTRONS=0
+  TAU_GRID=1
 }
 
 #EL is actually pi - theta, in radians
@@ -24,43 +15,43 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/data/IRIS/mock_stokes.f0
-  LAMBDA = 8540.0-8545.0
-  DLAMBDA = 0.05
+  NAME=/home/milic/snapi/row_test_5250.f0
+  LAMBDA = 5249.8 - 5251.0
+  DLAMBDA = 0.005
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,10
-  YRANGE = 1,10
-  LRANGE = 1,101
+  XRANGE = 1,384
+  YRANGE = 1,1
+  LRANGE = 31,231
   SCATTERED_LIGHT = 0.00
   SPECTRAL_BROADENING = 0
   OBSERVED_CONTINUUM = 1.0
   CGS_CONTINUUM = 1.0
-  ITERATIONS=0
-  STARTING_LM=1E3
-  STOKES_WEIGHTS=1.0,0.0,0.0,1.0
+  ITERATIONS=30
+  STARTING_LM=1E2
+  STOKES_WEIGHTS=1.0,0.0,0.0,0.0
 }
 
 model{
   ID=Model 1
-  READ_FROM_FILE=1
+  READ_FROM_FILE=0
   FILENAME=/home/milic/data/IRIS/iris_nodes.f0
-  TAUGRID=-7.7,1.0
+  TAUGRID=-5.0,1.0
   parameter{
   ID=TEMP
-  TAU=-7.6, -6.4, -5.,  -3.8, -2.6, -1.2,  0.
-  VALUES=5900.0,4000.0,5200.0,6300.0,6000.0,6000.0,6000.0
+  TAU=-3.5,-2.0,-1.2,-0.5,0.0
+  VALUES=4000.0,4600.0,5000.0,5500.0,6600.0
   }
   parameter{
   ID=VT
-  TAU=-7.6, -5.,  -2.6,  0.
-  VALUES=0.6E5, 1E5, 1E5,1E5
+  TAU=0.0
+  VALUES=1.0
   }
   parameter{
   ID=VS
-  TAU=-7.6, -5.,  -2.6,  0.
-  VALUES=3E5,2E5,1E5,0.0
+  TAU=-2.5,-1.0,0.0
+  VALUES=0.5E5,0E5,-0.5E5
   }
 }
 
