--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,12 +1,13 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=inverted_atmos_61.f0
+  FILE=row_test.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
   MOL=mol.cfg
   ELECTRONS=0
+  TAU_GRID=0
 }
 
 #EL is actually pi - theta, in radians
@@ -14,12 +15,16 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=test.dat
-  LAMBDA = 6300.5 - 6303.5
+  NAME=row_test_5250.f0
+  LAMBDA = 5249.8 - 5251.0
   DLAMBDA = 0.005
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
+  XRANGE = 1,768
   YRANGE = 1,1
 }
+
+#EL=3.14159265359
+#EL=2.0943
+  
