--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -1,11 +1,11 @@
 # kJ/mol -> eV: 96.485307
 
-ATOM=hydrogen_3lvl.cfg
+ATOM=hydrogen_2lvl.cfg
 ATOM=helium.cfg
 ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
 ATOM=aluminium.cfg
 ATOM=silicon.cfg
-ATOM=calcium.cfg
-ATOM=iron_6300.cfg
+ATOM=calcium_ir.cfg
+ATOM=iron.cfg
