--- a/cfg/invert_hinode.cfg
+++ b/cfg/invert_hinode.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_41.dat
+  FILE=falc_61.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,23 +24,23 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/scratch/hinode_test_inv/bl_map_500_300.f0
+  NAME=/home/milic/scratch/James/to_invert_james.f0
   LAMBDA = 6300.87730065 - 6303.25996109
   DLAMBDA = 0.021465409392156878
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
-  YRANGE = 175,175
-  LRANGE = 10,90
+  XRANGE = 1,5
+  YRANGE = 1,1
+  LRANGE = 1,60
   SCATTERED_LIGHT = 0.00
   SPECTRAL_BROADENING = 42.0
-  OBSERVED_CONTINUUM = 29785.13
+  OBSERVED_CONTINUUM = 1.0
   CGS_CONTINUUM = 3.117e+14
   STARTING_LM=1E3
-  ITERATIONS=50
+  ITERATIONS=30
   STOKES_WEIGHTS=1.0,0.0,0.0,4.0
-  STOPPING_CHISQ = 300.0
+  STOPPING_CHISQ = 20.0
 }
 
 
@@ -48,11 +48,11 @@ model{
   ID=Model 1
   READ_FROM_FILE=0
   FILENAME=/data/slam/home/milic/hinode_inv/region_1/C9/inverted_nodes_cnn.f0  
-  TAUGRID = -4.5, 0.5
+  TAUGRID = -5.0, 1.0
   parameter{
   ID=TEMP
-  TAU=-3.0,-2.0,-1.0,0.0
-  VALUES=4500.0,5800.0,6600.0,7000.0
+  TAU=-5.0,-3.5,-2.0,-0.5,1.0
+  VALUES=5000.0,4500.0,5800.0,6600.0,7000.0
   }
   parameter{
   ID=VT
@@ -61,13 +61,13 @@ model{
   }
   parameter{
   ID=VS
-  TAU=-2.5,-1.2,0.0
-  VALUES=1E5,0E5,1E5
+  TAU=-4.0,-2.0,0.0
+  VALUES=-1E5,0E5,1E5
   }
   parameter{
   ID=B
-  TAU=-2.0,0.0
-  VALUES=600.800
+  TAU=0
+  VALUES=600.0
   }
   parameter{
   ID=THETA
