--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,12 +1,13 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=muram_test_247_247.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms.cfg
+  ATOM=atoms.cfg  
   MOL=mol.cfg
   ELECTRONS=1
+  TAU_GRID=0
 }
 
 # EL is actually pi - theta, in radians
@@ -14,11 +15,11 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=muram_test_247_247_synth.dat
-  LAMBDA = 6300.5 - 6303.5
-  DLAMBDA = 0.005
+  NAME=falc_8542.dat
+  LAMBDA = 8539.0-8545.0
+  DLAMBDA = 0.01
   INVERT=0
-  RETURN_ATMOS = 1
+  RETURN_ATMOS = 0
   RETURN_MODEL = 0
   XRANGE = 1,1
   YRANGE = 1,1
