--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,13 +1,14 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=shah_test.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg  
   MOL=mol.cfg
-  ELECTRONS=1
+  ELECTRONS=0
   TAU_GRID=0
+  LEVEL_POPS=0
 }
 
 # EL is actually pi - theta, in radians
@@ -15,8 +16,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=falc_8542.dat
-  LAMBDA = 8539.0-8545.0
+  NAME=shah_test_ca.dat
+  LAMBDA = 3930.0-3936.0
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 0
