Implemented feature for outputting the level populations (for the project with JMB)

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -7,5 +7,6 @@ ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
 ATOM=aluminium.cfg
 ATOM=silicon.cfg
-ATOM=calcium_ir.cfg
+ATOM=calcium.cfg
 ATOM=iron.cfg
+ATOM=sodium_D.cfg
