--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,13 +1,14 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=row_test.f0
+  FILE=one.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
   MOL=mol.cfg
   ELECTRONS=0
   TAU_GRID=0
+  LEVEL_POPS=1
 }
 
 #EL is actually pi - theta, in radians
@@ -15,14 +16,13 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=row_test_5250.f0
-  LAMBDA = 5249.8 - 5251.0
-  DLAMBDA = 0.005
+  NAME=one_Na_synth.f0
+  LAMBDA = 5893.0 - 5898.0
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,768
-  YRANGE = 1,1
+  XRANGE = 1,10
+  YRANGE = 1,10
 }
 
 #EL=3.14159265359
