--- a/cfg/invert_test.cfg
+++ b/cfg/invert_test.cfg
@@ -1,20 +1,9 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_41.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-#  ID=MuRAM snapshot
-#  TYPE=MuRAM
-#  FILE=000000
-#  GEOMETRY=CARTESIAN3D
-#  NX=288
-#  NY=192
-#  NZ=288
-#  DX=20E3
-#  DY=12E3
-#  DZ=20E3
-  
   ATOM=atoms.cfg
   MOL=mol.cfg
 }
@@ -24,22 +13,23 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/data_SST_MvN/mag_region_401_800_0_139.f0
-  LAMBDA = 5887.7914658 - 5897.18400651
-  DLAMBDA = 0.00972312703583
+  NAME=/home/milic/data/Na_I_D_IRSOL/irsol_test.f0
+  LGRID = irsol_na_lines_wave.dat
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,140
-  YRANGE = 1,100
-  LRANGE = 1,957
-  MASK = sodium_lines_mask.dat
-  SCATTERED_LIGHT = 0.05
-  SPECTRAL_BROADENING = 50.0
-  OBSERVED_CONTINUUM = 28.4
+  XRANGE = 1,1
+  YRANGE = 1,1
+  LRANGE = 1,383
+  MASK = irsol_na_lines_mask.dat
+  SCATTERED_LIGHT = 0.0
+  SPECTRAL_BROADENING = 0.0
+  OBSERVED_CONTINUUM = 1.0
   CGS_CONTINUUM = 3.275E14
   ITERATIONS = 30
-  STARTING_LAMBDA=1E3
+  STARTING_LM=1E3
+  STOKES_WEIGHTS=1.0,0.0,0.0,0.0
+  STOPPING_CHISQ = 1.0
 }
 
 
@@ -49,23 +39,28 @@ model{
   FILENAME=NONE
   parameter{
   ID=TEMP
-  TAU=-2.7,-1.5,-0.6,0.0
-  VALUES=5600.0,4800.0,5200.0,6200.0
+  TAU=-4.0,-2.7,-1.5,-0.6,0.0
+  VALUES=6000.0,4300.0,5000.0,5700.0,7100.0
+  }
+  parameter{
+  ID=VT
+  TAU=0
+  VALUES=1E5
   }
   parameter{
   ID=VS
-  TAU=-3.3-0.5
+  TAU=-3.3, -0.5
   VALUES=1E5,-0.5E5
   }
   parameter{
   ID=B
-  TAU=-2.8,-0.5
-  VALUES=500.0,1200.0
+  TAU=-3.3, -0.5
+  VALUES=1000,1500
   }
   parameter{
   ID=THETA
   TAU=0
-  VALUES=-75.0
+  VALUES=45.0
   }
 }
 
