--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,14 +1,14 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=shah_test.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg  
   MOL=mol.cfg
-  ELECTRONS=0
+  ELECTRONS=1
   TAU_GRID=0
-  LEVEL_POPS=0
+  LEVEL_POPS=1
 }
 
 # EL is actually pi - theta, in radians
@@ -16,8 +16,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=shah_test_ca.dat
-  LAMBDA = 3930.0-3936.0
+  NAME=falc_NaI.dat
+  LAMBDA = 5888.0 - 5898.0
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 0
