--- a/atmos/Makefile.in
+++ b/atmos/Makefile.in
@@ -3,7 +3,7 @@ MAKEFILE      = Makefile
 OPTFLAGS      = -O4 -O5 -ffast-math
 WARNFLAGS     = -Wshadow
 DBGFLAGS      = -g3
-XTRAFLAGS     = -fsigned-char # -fno-stack-protector
+XTRAFLAGS     = -fsigned-char -Wno-free-nonheap-object # -fno-stack-protector
 # global variables
 AR	      = @AR@
 COMPILER      = @COMPILER@
@@ -23,7 +23,7 @@ CC	      = $(COMPILER)
 CCFLAGS	      = $(COMPFLAGS) $(INCLUDE)
 
 OBJS          = atmos.o atmos_pop.o atmos_rad.o atmos_chm.o atmos_rts.o\
-		atmos_obs.o atmos_fio.o acfg.o atmos_responses.o atmos_model.o atmos_fit.o atmos_obs_tau.o atmos_rad_synthesis.o
+		atmos_obs.o atmos_fio.o acfg.o atmos_responses.o atmos_model.o atmos_fit.o atmos_rad_synthesis.o
 SUBDIRS       = atmol
 LIB_LIBS      = atmol/libatmol.a
                 
