New hydrogen atom New partition functions for sodium atom (backup included) Removed some output debug

--- a/cfg/hydrogen_5lvl.cfg
+++ b/cfg/hydrogen_5lvl.cfg
@@ -77,6 +77,17 @@ atom{
       }
     }
     level{
+      N=4
+      EE=12.749398
+      G=32
+      A=1.2785e+07,8.4193e+06,8.9860e+06
+      bf{
+        TYPE=HYD
+        LAMBDA= 224,  321,  434,  561,  703,  859, 1205, 1799, 2918, 5252,  8895, 10998, 12576, 14588
+        VALUE=1.056,1.077,1.087,1.091,1.091,1.089,1.082,1.069,1.047,1.014,0.9736,0.9542,0.9408,0.9247
+      }
+    }
+    level{
       N=5
       EE=13.0545016 
       G=50
