--- a/cfg/sodium_D_old.cfg
+++ b/cfg/sodium_D_old.cfg
@@ -11,8 +11,16 @@ atom{
     CHARGE=0
     EION=5.13861
     partition{
-      TYPE=IRWIN
-      A_PART=-1.2433e3, 8.1537e2, -2.1391e2, 2.8108e1, -1.8486, 4.8692e-2
+      TYPE=TRAV
+      G0=2
+      trav{
+        XION=5.13861
+        G2=2
+        XL=7
+        GAMMA=2.400, 4.552
+        ALPHA=11.6348, 158.3593
+        ASYMP=Fischel
+      }
     }
 # energy levels
     level{
@@ -89,8 +97,8 @@ atom{
     CHARGE=1
     EION=47.282
     partition{
-      TYPE=IRWIN
-      A_PART=7.6923e2, -4.7358e2, 1.1664e2, -1.43096e1, 8.74037e-1, -2.122995e-2
+      TYPE=CONST
+      VALUE=1.0
     }
     level{
       N=1
