Fix for sodium D

--- a/cfg/sodium_D.cfg
+++ b/cfg/sodium_D.cfg
@@ -5,14 +5,14 @@ atom{
   ID=Na
   Z=2
   MASS=22.98
-  ABUND=1.7378e-06
-  NLTE = 0
+  ABUND=1.72e-06
+  NLTE = 1
   ion{
     CHARGE=0
     EION=5.13861
     partition{
       TYPE=IRWIN
-      A_PART=-1.2433e3, 8.1537e2, -2.1391e2, 2.8108e1, -1.8486, 4.8692e-2
+      A_PART=-2.60507178e3, 1.71419244e3, -4.50632658e2, 5.91751503e1, -3.88164979e0, 1.01752936e-1
     }
 # energy levels
     level{
@@ -90,27 +90,14 @@ atom{
     EION=47.282
     partition{
       TYPE=IRWIN
-      A_PART=7.6923e2, -4.7358e2, 1.1664e2, -1.43096e1, 8.74037e-1, -2.122995e-2
-    }
-    level{
-      N=1
-      EE=0      
-      G=1
-      J=0
-      L=0
-      GL=0.0
-      bf{
-        TYPE=PHY
-        LAMBDA= 100
-        VALUE=1E-19
-      }
+      A_PART=-3.68868193e-6, 2.28941495e-6, -5.66767833e-7, 6.99552282e-8, -4.30495956e-9, 1.05668164e-10
     }
   }
   ion{
     CHARGE=2
-    partition{
-      TYPE=CONST
-      VALUE=1.0
+      partition{
+      TYPE=IRWIN
+      A_PART=8.07571327e1, -4.59044171e1, 1.04582805e1, -1.17659896e0, 6.5647968e-2, -1.45759319e-3
     }
   }
 }
