Minor changes for setting up Na D inversions

--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -6,9 +6,9 @@ atmos{
   RTSOLVER=Bezier
   ATOM=atoms.cfg  
   MOL=mol.cfg
-  ELECTRONS=1
+  ELECTRONS=0
   TAU_GRID=0
-  LEVEL_POPS=1
+  LEVEL_POPS=0
 }
 
 # EL is actually pi - theta, in radians
@@ -16,8 +16,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=falc_NaI.dat
-  LAMBDA = 5888.0 - 5898.0
+  NAME=falc_Na_D.dat
+  LAMBDA = 5888.0-5898.0
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 0
