--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -1,6 +1,6 @@
 # kJ/mol -> eV: 96.485307
 
-ATOM=hydrogen_2lvl.cfg
+ATOM=hydrogen_4lvl.cfg
 ATOM=helium.cfg
 ATOM=carbon.cfg
 ATOM=nitrogen.cfg
@@ -8,5 +8,6 @@ ATOM=oxygen.cfg
 ATOM=aluminium.cfg
 ATOM=silicon.cfg
 ATOM=calcium.cfg
-ATOM=iron.cfg
+ATOM=iron_5892.cfg
+ATOM=nickel_5892.cfg
 ATOM=sodium_D.cfg
