--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_41.dat
+  FILE=falc_31.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,20 +24,23 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/chappie/inv_code/scratch/onepixel.f0
-  LAMBDA = 5887.7914658 - 5897.18400651
-  DLAMBDA = 0.00972312703583
+  NAME=/home/milic/data/tsp_20160703_obs2_scan4_for_ivan/na_100_200.f0
+  LGRID=na_lgrid.dat
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,20
-  YRANGE = 1,20
-  LRANGE =500,907
+  XRANGE = 1,4
+  YRANGE = 1,4
+  LRANGE =1,967
   MASK = sodium_lines_mask.dat
-  SCATTERED_LIGHT = 0.05
-  SPECTRAL_BROADENING = 50.0
-  OBSERVED_CONTINUUM = 28.4
+  SCATTERED_LIGHT = 0.00
+  SPECTRAL_BROADENING = 45.0
+  OBSERVED_CONTINUUM = 1.0
   CGS_CONTINUUM = 3.275E14
+  STARTING_LM=1E0
+  ITERATIONS=20
+  STOKES_WEIGHTS=1.0,0.0,0.0,4.0
+  STOPPING_CHISQ = 100.0
 }
 
 
@@ -48,12 +51,12 @@ model{
   parameter{
   ID=TEMP
   TAU=-3.0,-1.7,-0.7,0.0
-  VALUES=5600.0,4800.0,5200.0,6200.0
+  VALUES=4500.0,4800.0,5300.0,6400.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=1E5
+  VALUES=1E4
   }
   parameter{
   ID=VS
@@ -63,29 +66,11 @@ model{
   parameter{
   ID=B
   TAU=-3.0,-0.5
-  VALUES = 1000.0,2000.0
+  VALUES = 500.0,1000.0
   }
   parameter{
   ID=THETA
   TAU=0
-  VALUES=75
+  VALUES=45
   }
 }
-
-#LAMBDA = 5895.0 - 5897.0
-#LAMBDA = 4339.4 - 4340.0
-#LAMBDA = 4607.13 - 4607.53
-#LAMBDA = 6562.8-6564.6
-#LAMBDA = 6561.3-6564.3
-#LAMBDA = 8540.6-8543.6
-#LAMBDA = 6560.0-6565.6
-#LAMBDA = 1215.15 - 1215.55
-#LAMBDA = 4859.0 - 4863.0
-#LAMBDA = 6301.0 - 6303.0
-#LAMBDA = 5246.0 - 5251.0
-#LAMBDA = 15647.0 - 15654.0
-#EL=3.14159265359 # mu = 1
-#EL=1.7112577415047523 #mu = 0.14
-
-#LAMBDA = 5887.7914658 - 5897.18400651
-#DLAMBDA = 0.00972312703583
