--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,14 +1,14 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=one.f0
+  FILE=i_am_test_256_256.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
   MOL=mol.cfg
   ELECTRONS=0
   TAU_GRID=0
-  LEVEL_POPS=1
+  LEVEL_POPS=0
 }
 
 #EL is actually pi - theta, in radians
@@ -16,13 +16,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=one_Na_synth.f0
-  LAMBDA = 5893.0 - 5898.0
+  NAME=i_am_test_256_256_synth.f0
+  LAMBDA = 5250.0 - 5250.4
+  DLAMBDA = 0.005
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,10
-  YRANGE = 1,10
+  XRANGE = 1,128
+  YRANGE = 1,128
 }
 
 #EL=3.14159265359
