--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=i_am_test_256_256.f0
+  FILE=out_valc_nx339_ny330_nz128_dz12.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -16,14 +16,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=i_am_test_256_256_synth.f0
-  LAMBDA = 5250.0 - 5250.4
-  DLAMBDA = 0.005
+  NAME=out_valc_nx339_ny330_nz128_dz12_synth_test.f0
+  LAMBDA = 6301.0-6303.0
+  DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,128
-  YRANGE = 1,128
+  XRANGE = 1,339
+  YRANGE = 1,330
 }
 
 #EL=3.14159265359
