--- a/test/synth.cfg
+++ b/test/synth.cfg
@@ -17,7 +17,7 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=falc_1000G_5250.dat
-  LAMBDA=5249.5-5251.0
+  LAMBDA=5249.8 - 5251.0
   DLAMBDA=0.005
   INVERT=0
   RETURN_ATMOS = 0
