--- a/test/synth_3D1px.cfg
+++ b/test/synth_3D1px.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=acoustic_mean.f0
+  FILE=mean_quiet_atmos.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg  
@@ -16,8 +16,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=acoustic_mean_5250.f0
-  LAMBDA=5249.8 - 5251.0
+  NAME=mean_quiet_atmos_Na_D.f0
+  LAMBDA=5888.0 - 5892.0
   DLAMBDA=0.005
   INVERT=0
   RETURN_ATMOS = 0
